# orion-voice

./: .gitignore  Dockerfile  README.md  electron-main.js  fly.toml  package.json  pyproject.toml  requirements.txt  start-desktop.bat
desktop/: index.html  package.json  start-electron.bat  tailwind.config.js
desktop/electron/: main.js
desktop/src/: App.tsx  main.tsx
desktop/src/components/: Layout.tsx  TitleBar.tsx
desktop/src/hooks/: useApi.ts  useTheme.tsx
desktop/src/pages/: Dashboard.tsx  Notes.tsx  Settings.tsx
desktop/src/styles/: globals.css
scripts/: install.bat  launch.bat  launch.vbs  start.bat  stop.bat
src/orion_voice/: __init__.py  __main__.py  app.py
src/orion_voice/api/: __init__.py  notes.py  server.py  sync.py
src/orion_voice/core/: __init__.py  clipboard.py  config.py  hotkeys.py
src/orion_voice/stt/: __init__.py  engine.py  recorder.py
src/orion_voice/tts/: __init__.py  engine.py  voices.py
web/: index.html  package.json  tailwind.config.js  vite.config.ts
web/public/: manifest.json
web/src/: App.tsx
web/src/components/: Header.tsx  MobileNav.tsx
web/src/hooks/: useApi.ts
web/src/pages/: Help.tsx  Notes.tsx  TTS.tsx
web/src/styles/: globals.css
