[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-notes"
version = "2.0.0"
description = "Orion Notes - Personal notes app with Text-to-Speech and Speech-to-Text for Windows"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
